--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -254,7 +254,21 @@
         <paper-toast id="duplicateInputToast" class="fit-bottom" text="Duplicate found."></paper-toast>
     </template>
     <script>
-        
+
+        //Helper function for sorting inputs
+        function compare(a,b) 
+        {
+            if(a.name < b.name)
+            {
+                return -1;
+            }
+            if(a.name > b.name)
+            {
+                return 1;
+            }
+            return 0;
+        };
+
         (function() {
 
             var keyboardMap = ["", "", "", "CANCEL", "", "", "HELP", "", "BACK_SPACE", "TAB", "", "", "CLEAR", "ENTER", "RETURN", "", "SHIFT", "CTRL", "ALT", "PAUSE", "CAPSLOCK", "KANA", "EISU", "JUNJA", "FINAL", "HANJA", "", "ESC", "CONVERT", "NONCONVERT", "ACCEPT", "MODECHANGE", "SPACE", "PAGE_UP", "PAGE_DOWN", "END", "HOME", "LEFT", "UP", "RIGHT", "DOWN", "SELECT", "PRINT", "EXECUTE", "PRINTSCREEN", "INSERT", "DELETE", "", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ":", ";", "LESS_THAN", "=", "GREATER_THAN", "QUESTION_MARK", "AT", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "WIN", "", "CONTEXT_MENU", "", "SLEEP", "NUMPAD0", "NUMPAD1", "NUMPAD2", "NUMPAD3", "NUMPAD4", "NUMPAD5", "NUMPAD6", "NUMPAD7", "NUMPAD8", "NUMPAD9", "MULTIPLY", "ADD", "SEPARATOR", "SUBTRACT", "DECIMAL", "DIVIDE", "F1", "F2", "F3", "F4", "F5", "F6", "F7", "F8", "F9", "F10", "F11", "F12", "F13", "F14", "F15", "F16", "F17", "F18", "F19", "F20", "F21", "F22", "F23", "F24", "", "", "", "", "", "", "", "", "NUM_LOCK", "SCROLL_LOCK", "WIN_OEM_FJ_JISHO", "WIN_OEM_FJ_MASSHOU", "WIN_OEM_FJ_TOUROKU", "WIN_OEM_FJ_LOYA", "WIN_OEM_FJ_ROYA", "", "", "", "", "", "", "", "", "", "CIRCUMFLEX", "EXCLAMATION", "\"", "#", "$", "%", "&", "_", "(", ")", "*", "+", "|", "HYPHEN_MINUS", "{", "}", "~", "", "", "", "", "VOLUME_MUTE", "VOLUME_DOWN", "VOLUME_UP", "", "", ";", "=", ",", "-", ".", "/", "`", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "[", "\\", "]", "'", "", "META", "ALTGR", "", "WIN_ICO_HELP", "WIN_ICO_00", "", "WIN_ICO_CLEAR", "", "", "WIN_OEM_RESET", "WIN_OEM_JUMP", "WIN_OEM_PA1", "WIN_OEM_PA2", "WIN_OEM_PA3", "WIN_OEM_WSCTRL", "WIN_OEM_CUSEL", "WIN_OEM_ATTN", "WIN_OEM_FINISH", "WIN_OEM_COPY", "WIN_OEM_AUTO", "WIN_OEM_ENLW", "WIN_OEM_BACKTAB", "ATTN", "CRSEL", "EXSEL", "EREOF", "PLAY", "ZOOM", "", "PA1", "WIN_OEM_CLEAR", ""];
@@ -480,13 +494,6 @@
                     var self = this;
 
                     //Clear the input from our presets
-                    //Format in a way that the input controller expects
-                    // var clearedInput = {
-                    //     name: self.selectedItem.name,
-                    //     controller: "keyboard",
-                    //     input: self.selectedItem.bindings.keyboard
-                    // };
-
                     //Let the input controller know the new configurations
                     self.eventEmitter.emit('plugin.inputController.unregisterInput', self.selectedItem.bindings.keyboard);
 
@@ -498,15 +505,8 @@
                     var self = this;
 
                     //Clear the input from our presets
-                    //Format in a way that the input controller expects
-                    var clearedInput = {
-                        name: self.selectedItem.name,
-                        controller: "gamepad",
-                        input: self.selectedItem.bindings.gamepad
-                    };
-
                     //Let the input controller know
-                    self.eventEmitter.emit('plugin.inputController.unregisterInput', clearedInput);
+                    self.eventEmitter.emit('plugin.inputController.unregisterInput', self.selectedItem.bindings.gamepad);
                     this.$.clearedInputToast.open();
                 },
 
@@ -611,7 +611,6 @@
                 //Converts a preset object(hash map) to a consumable array for the input configurator
                 presetToArray: function(preset) {
                     var self = this;
-                    console.log("OHBOI", preset);
 
                     //Convert preset to a consumable map for converting to an array
                     var inputMap = new Map();
@@ -676,7 +675,7 @@
 
                         arrayPreset.push(arrayInput);
                     });
-                    console.log(arrayPreset);
+                    arrayPreset.sort(compare);
 
                     self.presetArray = arrayPreset;
                     return arrayPreset;
