--- a/src/plugins/peer-view/public/webcomponents/orov-mc-assignments.html
+++ b/src/plugins/peer-view/public/webcomponents/orov-mc-assignments.html
@@ -49,7 +49,7 @@
 
         },
         updateViewers: function(v){
-            console.log('got viewers update:',this.viewers.length);
+           // console.log('got viewers update:',this.viewers.length);
         },
         kick: function(e){
           var model = e.model;
