--- a/src/plugins/controllerboard2x/public/webcomponents/orov-power-behavior.html
+++ b/src/plugins/controllerboard2x/public/webcomponents/orov-power-behavior.html
@@ -38,30 +38,13 @@
           }
         },
         behaviors: [namespace('behaviors').oROVStandard],
-        registerBaseEmitterHanlders: function(emitter) {
+        registerEmitterHandlers: function(emitter) {
           var self = this;
 
           emitter.on('plugin.controllerboard2x.systemPower.update', function(data){
             newData = data;
 
           });
-          setInterval(function(){
-            if (newData==lastData) return;
-            lastData=newData;
-            var data=newData;
-              if ('voltage' in data.board){
-                self.setVoltage(parseFloat(data.board.voltage));
-              };
-
-              if ('port' in data.battery.current){
-                self.setportBattery(parseFloat(data.battery.current.port));
-              };
-
-              if ('starboard' in data.battery.current){
-                self.setstarboardBattery(parseFloat(data.battery.current.starboard));
-              };            
-            
-          },500)
 
           emitter.withHistory.on('settings-change.batteryDefintions', function(settings){
             var selectedBattery = settings.batteryDefintions.selectedBattery;
@@ -92,14 +75,26 @@
           this.setportBattery(this.portCurrent);
           this.setstarboardBattery(this.starboardCurrent);
 
-          if(typeof(this.registerEmitterHandlers)=='function'){
-            var org = this.registerEmitterHandlers;
-            this.registerEmitterHandlers=function(emitter){
-              self.registerBaseEmitterHanlders(emitter);
-              org(emitter);
-            };
-          } 
-          this.registerBaseEmitterHanlders(this.eventEmitter);
+          this._dataThrottleInterval=setInterval(function(){
+            if (newData==lastData) return;
+            lastData=newData;
+            var data=newData;
+              if ('voltage' in data.board){
+                self.setVoltage(parseFloat(data.board.voltage));
+              };
+
+              if ('port' in data.battery.current){
+                self.setportBattery(parseFloat(data.battery.current.port));
+              };
+
+              if ('starboard' in data.battery.current){
+                self.setstarboardBattery(parseFloat(data.battery.current.starboard));
+              };            
+            
+          },500)
+        },
+        detached:function(){
+          clearInterval(this._dataThrottleInterval);
         }
       };
     }());
