--- a/src/static/webcomponents/json-schema-editor/json-schema-editor.html
+++ b/src/static/webcomponents/json-schema-editor/json-schema-editor.html
@@ -66,7 +66,9 @@
     editor: {},
     behaviors: [namespace('behaviors').oROVGlobalization],
     detached: function(){
-      this.editor.destroy();
+      if (this.editor.destroy){  //May not have been created yet
+        this.editor.destroy();
+      }
     },
     attached: function(){
         var self=this;
