--- a/src/plugins/navigation-data/public/webcomponents/attitude-indicator.html
+++ b/src/plugins/navigation-data/public/webcomponents/attitude-indicator.html
@@ -507,20 +507,17 @@
        };
 
        var mapOrientationToCrosshairPos = function(pitchIn, rollIn, element) {
-        var yPos;
 
         if(pitchIn > 90)
         {
-          yPos = 90;
+          pitchIn = 90;
         }
         else if(pitchIn < -90)
         {
-          yPos = -90;
+          pitchIn = -90;
         }
-        else
-        {
-          yPos = map(pitchIn, -90, 90, -287, 112);
-        }
+
+        var yPos = map(-pitchIn, -90, 90, -287, 112);
         element.style.transform = "translate3d(-117px," + yPos + "px, 0px) rotate(" + rollIn + "deg)";
        }
 
