--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -428,6 +428,7 @@
                     this.presetFunction = function(preset, actions) {
 
                         //Set this to our current preset on the input Configurator
+                        console.log("Got an updated preset", preset);
                         self.preset = preset;
                         self.actions = actions;
 
