--- a/src/plugins/video/public/webcomponents/orov-video.html
+++ b/src/plugins/video/public/webcomponents/orov-video.html
@@ -21,7 +21,7 @@
       </mjpeg-video>
     </template>
 
-    <template is="dom-if" if="{{displayPlayer(videoMimeType,'video/x-motion-jpeg','socket.io',_registerdConnection)}}" >
+    <template is="dom-if" if="{{displayPlayer(videoMimeType,'video/x-motion-jpeg','ws',_registerdConnection)}}" >
       <mjpeg-packet-video id="camera1" border='1' style='width: 100%; height:100%'>
         <content></content>
       </mjpeg-packet-video>
