more information, remember to save

--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -330,7 +330,7 @@
         </div>
 
 
-        <paper-toast id="updatedPresetToast" text="Updated Preset!"></paper-toast>
+        <paper-toast id="updatedPresetToast" text="Updated Preset! Remember to save your new preset!"></paper-toast>
 
         <paper-toast id="clearedInputToast" text="Cleared input!"></paper-toast>
         <paper-toast id="savedPresetToast" text="Saved preset!"></paper-toast>
