less comical applet icons

--- a/src/system-plugins/ui-manager/public/webcomponents/grid-menu/grid-menu-button.html
+++ b/src/system-plugins/ui-manager/public/webcomponents/grid-menu/grid-menu-button.html
@@ -45,8 +45,8 @@
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
-			--iron-icon-width: 70%;
-			--iron-icon-height: 70%;
+			--iron-icon-width: 30px;
+			--iron-icon-height: 30px;
 			--iron-icon-fill-color: var(--grid-menu-button-fill-color);
 		}
 		
